# FitBoyMk3

./: CMakeLists.txt  prj.conf  xiao_ble_nrf52840.overlay
lib/: appBasic.h  appIncludes.h  globals.h
lib/appManager/: CMakeLists.txt  appManager.c  appManager.h
lib/btManager/: CMakeLists.txt  btManager.c  btManager.h
lib/buttons/: CMakeLists.txt  buttons.c  buttons.h
lib/fonts/: Bell.c  Montserrat.c  Mostane.c  Mostane_20.c  Mostane_32.c  Mostane_64.c  Oswald_12.c  TallerFont.c  TallerFont_small.c
lib/mainMenu/: mainMenu.c  mainMenu.h
lib/musicControl/: musicControl.c  musicControl.h
lib/notifications/: notificationViewer.c  notificationViewer.h  styles.h
lib/settings/: CMakeLists.txt  settings.c  settings.h
lib/utils/: CMakeLists.txt  circularbuffer.c  circularbuffer.h  linkedlist.c  linkedlist.h  utils.c  utils.h
src/: main.c
